Fixes image sizes on smaller screens

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,3 +3,12 @@
 ---
 
 @import "styles";
+
+img {
+  max-width: 100%;
+  height: auto;
+  &.center {
+    margin: 0 auto;
+    display: block;
+  }
+}
